--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/turf": "^5.1.6",
+    "axios": "^0.19.0",
+    "geolocation-utils": "^1.2.2",
+    "mapbox-gl": "^1.5.1",
+    "rand-token": "^0.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-map-gl": "^5.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-window-size": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
